Simplify date based Lovebox scheduler