@@ -1,346 +1,68 @@
-![maven-docker-publish](https://github.com/Patertuck/lovebox-telegram-sender/actions/workflows/maven-docker-publish.yml/badge.svg)
-
 # Lovebox Telegram Sender
 
-The app allows you to send messages to a single instance of Lovebox via Telegram Bot. Text messages and captioned photos are supported. Other message types (e.g. stickers, audio, etc.) will result in a standard message.
-It also supports an authenticated scheduler API for triggering Lovebox sends without relying on Telegram bot-to-bot messages.
+This application sends a Lovebox message scheduled for the current date at 21:30 in the `Europe/Zurich` time zone. It also accepts manual text and photo messages from one authorized Telegram chat.
 
-## Application Setup
+It does not poll Lovebox delivery states, receive hearts, or track whether a message arrived.
 
-To set up the application, you will need to retrieve some IDs and values from the Lovebox API. The following curl commands will help you to on an existing account. Make sure you have already set up your account using the Android or iOS app.
+## Scheduled-message database
 
-### Login with Password
+The SQLite database has one table with exactly two columns:
 
-Log in with a password to retrieve the authorisation token for the following request.
-
-```bash
-curl --location --request POST 'https://app-api.loveboxlove.com/v1/auth/loginWithPassword' \
---header 'accept: application/json' \
---header 'content-type: application/json' \
---header 'host: app-api.loveboxlove.com' \
---data-raw '{
-    "email": "my@email.com",
-    "password": "mySecret"
-}'
+```sql
+CREATE TABLE messages (
+  send_date TEXT PRIMARY KEY,
+  message TEXT NOT NULL
+);
 ```
 
-```json
-{
-  "_id": "42c61f261f399d0016350b7f",
-  "firstName": "FirstName",
-  "email": "my@email.com",
-  "token": "exJhbGcpOiJIVzI1NipsInR5cCI6IkpXVDj9.eyJ1c2xySwFiOiI2MWM5LWYzNjFhMzk5YzAwMTYzNTBhN2YiLCJpYXQiFjE22DAVNmQwNTL9.qlsvp_roqCu4MFwBMwNZu2eyImFGjogvNeR4tkoTLPe"
-}
-```
+`send_date` is an exact ISO date (`YYYY-MM-DD`). Only one message can be scheduled per date.
 
-### Me Request with the Authorization Token
+## Create the database from Word
 
-Use the token above to make a 'Me Request' to find the configuration details you need.
-
-```bash
-curl --location --request POST 'https://app-api.loveboxlove.com/v1/graphql' \
---header 'authorization: Bearer exJhbGcpOiJIVzI1NipsInR5cCI6IkpXVDj9.eyJ1c2xySwFiOiI2MWM5LWYzNjFhMzk5YzAwMTYzNTBhN2YiLCJpYXQiFjE22DAVNmQwNTL9.qlsvp_roqCu4MFwBMwNZu2eyImFGjogvNeR4tkoTLPe' \
---header 'content-type: application/json' \
---header 'host: app-api.loveboxlove.com' \
---data-raw '{
-    "operationName": "me",
-    "variables": {},
-    "query": "query me {\n  me {\n    _id\n    _id\n    createdAt\n    firstName\n    email\n    beta\n    settings {\n      streak\n      loveGoal\n      reminders {\n        day\n        meridiem\n        number\n        weekday\n        time\n        __typename\n      }\n      specialDates {\n        _id\n        name\n        date\n        dateType\n        __typename\n      }\n      notifications {\n        generalMessageRead\n        generalHeartReceived\n        marketingOffers\n        marketingOffersPush\n        marketingOffersEmail\n        __typename\n      }\n      __typename\n    }\n    addresses {\n      firstname\n      lastname\n      streetAddress\n      zipCode\n      city\n      country\n      state\n      __typename\n    }\n    boxes {\n      _id\n      color\n      companyId\n      signature\n      picture\n      nickname\n      notifications {\n        disableUntil\n        messageRead\n        heartReceived\n        __typename\n      }\n      admin {\n        _id\n        firstName\n        email\n        __typename\n      }\n      privacyPolicy\n      pairingCode\n      isConnected\n      isAdmin\n      hardware\n      hasColor\n      connectionDate\n      macAddress\n      __typename\n    }\n    roles\n    device {\n      _id\n      appVersion\n      os\n      __typename\n    }\n    profile\n    reminder\n    subscription {\n      subscribed\n      platform\n      __typename\n    }\n    fcmToken\n    language\n    loveCoins\n    lastSentMessage\n    __typename\n  }\n}\n"
-}'
-```
-
-```json
-{
-  "data": {
-    "me": {
-      "_id": "42c61f261f399d0016350b7f",
-      "createdAt": "2021-12-24T19:27:34.542Z",
-      "firstName": "FirstName",
-      "email": "me@email.com",
-      "beta": 0,
-      "settings": {
-        "streak": 1,
-        "loveGoal": "TwiceAWeek",
-        "reminders": [
-          // ...
-        ],
-        "specialDates": [
-          // ...
-        ],
-        "notifications": {
-          "generalMessageRead": true,
-          "generalHeartReceived": true,
-          "marketingOffers": true,
-          "marketingOffersPush": true,
-          "marketingOffersEmail": true,
-          "__typename": "NotificationUserSettings"
-        },
-        "__typename": "Settings"
-      },
-      "addresses": [],
-      "boxes": [
-        {
-          // lovebox.box-id
-          "_id": "417a114e58e15a0214cf3612",
-          "color": "#8A64FF",
-          "companyId": "",
-          // lovebox.signature 
-          "signature": "Signature",
-          "picture": null,
-          "nickname": "Nickname",
-          "notifications": {
-            "disableUntil": null,
-            "messageRead": true,
-            "heartReceived": true,
-            "__typename": "NotificationSettings"
-          },
-          "admin": {
-            "_id": "61c61ecc71010a00161789f2",
-            "firstName": null,
-            "email": "significant-other@email.com",
-            "__typename": "User"
-          },
-          "privacyPolicy": "ADMIN_AND_ME",
-          "pairingCode": "BECF-RBMA",
-          "isConnected": true,
-          "isAdmin": false,
-          "hardware": "C2",
-          "hasColor": true,
-          "connectionDate": "2021-12-24T19:27:35.123Z",
-          "macAddress": "0CDC7ECF4FC4",
-          "__typename": "BoxSettings"
-        }
-      ],
-      "roles": [],
-      "device": {
-        // lovebox.device-id
-        "_id": "42fab8322d8cec91",
-        "appVersion": "5.14.9",
-        "os": "android",
-        "__typename": "Device"
-      },
-      "profile": {
-        // ...
-      },
-      "reminder": 0,
-      "subscription": null,
-      "fcmToken": "edMLqMyMrpoGig9ZHdFdvH:AdA91bGGwx3UEuYTdhYOWDIdwlm2b23B9Jjin3MCGbi7CmUSpCVHFlorfryygi5QUBQMUVUiGsDJIE3RliENFmsuWrOnf4cBba-mNT5032NoKlo9AdPU5YhuCOR0KIdAbCokR42Hru",
-      "language": "en",
-      "loveCoins": 10,
-      "lastSentMessage": "2023-01-01T17:55:34.890Z",
-      "__typename": "User"
-    }
-  }
-}
-```
-
-### Setting up a Telegram Bot
-
-To create a chatbot on Telegram, you need to contact the [@BotFather](https://telegram.me/BotFather), who is a bot which is used to create other bots.
-
-The command you need is `/newbot`, which will take you through the next steps to create your bot. Follow the instructions and get the bot `username` and `token`.
-
-### Adjusting SpringBoot's application.properties
-
-Running the application from source requires customisation according to your settings. Adjust the `application.properties' in the sources or pass it as Java options or CLI arguments to the application.
-
-```properties
-# Lovebox Login
-lovebox.enabled=true
-lovebox.email=me@email.com
-lovebox.password=mySecret
-# Lovebox Setting
-lovebox.signature=Signature
-lovebox.device-id=42fab8322d8cec91
-lovebox.box-id=417a114e58e15a0214cf3612
-# Telegram Bot Settings
-bot.username=Lovebox_bot
-bot.token=4072971853:ABEojZ42uNA6YYn_c7DF8RH0UOorqXuveSQ
-bot.allowed-chat-id=8782720476
-# Scheduler Integration
-integration.scheduler-token=change-me
-```
-
-### Setting Environment Variables e.g. for Docker
-
-The following snippet can be passed as `.env` and read by `docker-compose.yml`, or used to pass directly to the the `docker run` command.
-
-```bash
-# Docker Image
-LOVEBOX_TELEGRAM_SENDER_IMAGE="patertuck/lovebox-telegram-sender:main"
-
-# Lovebox Login
-LOVEBOX_ENABLED=true
-LOVEBOX_EMAIL="me@email.com"
-LOVEBOX_PASSWORD="mySecret"
-# Lovebox Setting
-LOVEBOX_SIGNATURE="Signature"
-LOVEBOX_DEVICE_ID="42fab8322d8cec91"
-LOVEBOX_RELATION_ID="33c67a2127d7be09142f4326"
-LOVEBOX_BOX_ID="417a114e58e15a0214cf3612"
-# Telegram Bot Settings
-BOT_USERNAME="Lovebox_bot"
-BOT_TOKEN="4072971853:ABEojZ42uNA6YYn_c7DF8RH0UOorqXuveSQ"
-BOT_ALLOWED_CHAT_ID="8782720476"
-# Scheduler Integration
-INTEGRATION_SCHEDULER_TOKEN="change-me"
-INTEGRATION_MESSAGES_DB_PATH="/app/data/messages.db"
-```
-
-Do not commit your real `.env`. This repository ignores `.env` so secrets stay local to your machine or server.
-
-## Running as One Container
-
-The Docker image contains the full application: Telegram bot, internal anniversary scheduler, and HTTP API.
-
-The SQLite database is intentionally **not** part of the published Docker Hub image. Mount it from the server so it stays private and survives container updates.
-
-Server file layout example:
+Use a `.docx` document with sections in this form:
 
 ```text
-server/
-  docker-compose.yml
-  .env
-  data/
-    messages.db
+24.12.26
+My message for this date.
+
+Another paragraph is preserved.
+
+25.12.26
+Another message.
 ```
 
-Run it with Docker Compose:
+Each `DD.MM.YY` heading schedules the following paragraphs until the next heading, one calendar year after the date in the document. The original date heading is included as the first line of the sent message. The importer rejects duplicate scheduled dates or empty sections and only replaces the old database after the entire document has validated.
 
-```bash
+Set the document and database paths in `.env`:
+
+```properties
+MESSAGES_DOCUMENT_PATH=message.docx
+MESSAGES_DATABASE_PATH=data/messages.db
+```
+
+From the project directory, run:
+
+```powershell
+.\mvnw.cmd --% -Dmaven.test.skip=true spring-boot:run -Dspring-boot.run.profiles=import
+```
+
+The command exits after creating `data/messages.db`. Copy that file to the server's mounted `data/` directory if needed.
+
+## Configuration
+
+Use `.env.example` as the template for `.env`. The relevant database setting is:
+
+```properties
+MESSAGES_DATABASE_PATH=/app/data/messages.db
+```
+
+The normal schedule is 21:30 Europe/Zurich.
+
+The regular container mounts `./data` at `/app/data`, so the schedule persists across image updates.
+
+## Run and test
+
+```powershell
 docker compose up -d
+.\mvnw.cmd test
 ```
-
-The provided `docker-compose.yml` will:
-- pull the published app image from Docker Hub
-- expose the HTTP API on port `8080`
-- load runtime secrets from `.env`
-- mount `./data` into `/app/data`
-
-This means your private `messages.db` stays on the server and is not baked into the Docker Hub image.
-
-### Linux Server Setup Script
-
-For a Linux VPS with Docker and Docker Compose already installed, you can use the setup script to stage the deployment files, validate the server inputs, and start the container.
-
-The script is self-contained. You can send only:
-- `setup-server.sh`
-- an optional ready-made `.env`
-- `data/messages.db`
-
-Then on the server, run:
-
-```bash
-bash setup-server.sh
-```
-
-The script will:
-- create `/opt/lovebox-telegram-sender` by default
-- generate `docker-compose.yml` there
-- generate `.env` if needed
-- refuse to start if `.env` still contains placeholder values
-- refuse to start if `data/messages.db` is missing
-- refuse to start if port `8080` is already in use
-- pull the configured Docker Hub image and run `docker compose up -d`
-
-If you want a different install directory, pass it as the first argument:
-
-```bash
-bash setup-server.sh /srv/lovebox-telegram-sender
-```
-
-On the first run, the script may stop after creating `.env`. Fill in the real values, make sure `${INSTALL_DIR}/data/messages.db` exists, and run the script again.
-On the first run, the script may stop after creating `.env`. Fill in the real values, make sure the chosen install directory contains `data/messages.db`, and run the script again.
-
-### Sending a Scheduled Message via API
-
-Your scheduler can trigger a Lovebox send by calling this application directly.
-
-```bash
-curl --location --request POST 'http://localhost:8080/api/lovebox/messages' \
---header 'X-Lovebox-Token: change-me' \
---header 'content-type: application/json' \
---data-raw '{
-  "command": "send",
-  "text": "Good morning, I love you",
-  "source": "scheduler"
-}'
-```
-
-## Building the Docker Container
-
-### Building the Docker Container Locally
-
-```bash
-mvn spring-boot:build-image \
-  --batch-mode \
-  --no-transfer-progress \
-  -Dspring-boot.build-image.imageName='patertuck/${project.artifactId}:${project.version}'
-```
-
-### Building the Docker Container and Pushing to Docker Hub
-
-```bash
-mvn spring-boot:build-image \
- --batch-mode \
- --no-transfer-progress \
- -Dspring-boot.build-image.imageName='patertuck/${project.artifactId}:${project.version}' \
- -Dspring-boot.build-image.publish=true \
- -DCI_REGISTRY=https://index.docker.io/v1/ \
- -DCI_REGISTRY_USER=${DCI_REGISTRY_USER} \
- -DCI_REGISTRY_PASSWORD=${DCI_REGISTRY_PASSWORD}
-```
-
-### Running the Application from Maven
-
-```bash
-mvn spring-boot:run -Dspring-boot.run.profiles=local
-```
-
-Plain local Spring runs now auto-read the repo-root `.env` file. This makes IntelliJ runs and `mvn spring-boot:run`
-behave like `docker compose` for the same config values. Process environment variables still override `.env`.
-
-SQLite uses a native library, so Java 21+ should be started with native access enabled. The Maven configuration in this project already adds `--enable-native-access=ALL-UNNAMED` for `spring-boot:run` and test execution.
-
-If you run the jar directly, pass the flag yourself:
-
-```bash
-java --enable-native-access=ALL-UNNAMED -jar target/lovebox-telegram-sender-0.1.0-SNAPSHOT.jar
-```
-
-### Running the Test Suite
-
-```bash
-mvn test
-```
-
-The Maven test configuration also adds `--enable-native-access=ALL-UNNAMED` so the SQLite warning does not appear during tests.
-
-### Fixing Known Issues with Missing Fonts
-
-Since the application uses fonts, we need to make sure that fonts are part of the Docker container. The containers created above will throw an exception if they are `java.lang.NullPointerException`: Cannot load from short array because `sun.awt.FontConfiguration.head` is null.
-
-[Andreas Ahlensdorf](https://github.com/aahlenst) describes nicely the font problem in his blog post [Prerequisites for Font Support in AdoptOpenJDK](https://blog.adoptopenjdk.net/2021/01/prerequisites-for-font-support-in-adoptopenjdk/).
-
-After further research, it seems that the only way to add fonts to the build pack base image is to create an OCI run image by extending the base image. See the `Dockerfile.base-cnb` file and what a patch with the additional font packages might look like.
-
-Build the `runImage` locally with the following command.
-
-```bash
-docker build --no-cache -f Dockerfile.base-cnb -t patertuck/ubuntu-noble-run:latest .
-```
-
-Since we are running the pull policy with `IF_NOT_PRESENT` in the `mvn spring-boot:build-image` command, we need to make sure that the latest version of the builder is available locally. Finally, pass the `runImage` to the `spring-boot-maven-plugin` to create the docker container containing the fonts.
-
-```bash
-mvn spring-boot:build-image \
- --batch-mode \
- --no-transfer-progress \
- -Dspring-boot.build-image.imageName='patertuck/${project.artifactId}:${project.version}' \
- -Dspring-boot.build-image.runImage=patertuck/ubuntu-noble-run:latest \
- -Dspring-boot.build-image.pullPolicy=IF_NOT_PRESENT
-```
-
-## Credits
-
-Reverse engineering (unpinning certificates) was done using [APKLab](https://github.com/APKLab/APKLab) and the [Lovebox APK](https://www.apkmonk.com/app/love.lovebox.loveboxapp/) provided by [apkmonk](https://www.apkmonk.com). Postman was used to capture the REST calls from the mobile application. The article [Capturing Http Requests](https://learning.postman.com/docs/sending-requests/capturing-request-data/capturing-http-requests/) covers everything you need to know. After updating Postman, [new certs](https://learning.postman.com/docs/sending-requests/capturing-request-data/capturing-http-requests/#troubleshooting-certificate-issues) need to be installed.
